--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 .Rproj.user
 goodreads_shiny.Rproj
 .RData
+www
+rsconnect/shinyapps.io/rvallejov/BooksAdaptedIntoFilms.dcf
+./rsconnect/shinyapps.io/rvallejov/BooksAdaptedIntoFilms.dcf
+rsconnect
